package com.progettoids_giuseppedemarco.command;

public interface LibraryCommand {
    String getLabel();
    void execute();
}
